css/site.css
@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');

/* If you see this, you should REALLY come chat with us over on the Discord server! */

/* GENERAL: */
html, body {
    --crush40-red: rgb(105, 2, 2);
    --crush40-red-hover: rgb(85, 2, 2);
    --crush40-blue: darkblue;

    --crush40-red-pale: rgb(90, 30, 30);
    --crush40-red-pale-hover: rgb(120, 30, 30);
    --crush40-blue-pale: rgb(30, 30, 90);
    --crush40-blue-pale-hover: rgb(60, 30, 90);

    --crush40-gray: rgb(169, 169, 169);
    --crush40-darkgray: rgb(140, 140, 140);

    margin: 0;
    position: absolute;
    z-index: -2;
    width: 100%;
    height: 100%;

    font-family: 'Roboto', sans-serif;
}

.section {
    overflow: auto;
}

.emptyButton, .filledButton {
    text-align: center;
    font-size: 125%;
    border-radius: 10px;
    color: inherit;

    transition: background-color 0.25s;

    cursor: pointer;

    position: relative;

    margin-bottom: 5px;

    /* Smallscreen: */
    width: 100%;
    height: 60px;
}

.closeButton {
    background-color: transparent;
    cursor: pointer;
    border: none;
}

.btnSet {
    width: 100%;
    display: flex;
    flex-direction: column;
}

@media (min-width: 580px) {
    .btnSet {
        width: auto;
        flex-direction: row;
    }

    .btnWidthNormal {
        width: 285px;
    }

    .btnWidthWide {
        width: 400px;
    }

    button {
        height: 60px;
        margin-right: 5px;
    }
}

.emptyButton {
    border: solid 4px var(--crush40-red);
    background-color: transparent;
}

.emptyButton:hover {
    background-color: rgba(0, 0, 0, 0.6);
}

.filledButton {
    border: none;
    background-color: var(--crush40-red);
}

.filledButton:hover {
    background-color: var(--crush40-red-hover);
}

.backgroundContainer {
    background-color: black;

    position: fixed;
    z-index: -1;
    width: 100%;
    height: 100%;
}

.background {
    opacity: 50%;

    background-image: url('../img/visuals/Opening.png');
    background-position: center;
    background-size: cover;

    width: 100%;
    height: 100%;
}

.floating {
    position: fixed;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    z-index: 99;

    visibility: collapse;
}

.floating .floatingClose {
    background-color: rgba(0, 0, 0, 0.3);
    height: 100%;
}

.floating .panel {

    z-index: 100;

    position: absolute;
    background-color: var(--crush40-gray);
    width: 100%;
    height: 100%;
    bottom: 0;

    box-shadow: 0 -2px 1px rgba(0, 0, 0, 0.2);

    display: grid;
    grid-template-rows: auto 1fr;
    grid-template-areas:
        "titlebar"
        "cont";
}

.floating .panel .contents {
    grid-area: cont;

    width: 100%;
    height: 100%;
    border: none;
}

.floating .panel .page {
    width: 100%;
    height: 100%;
}

.floating .panel .titlebar {
    grid-area: titlebar;

    padding: 0;
    background-color: var(--crush40-darkgray);

    display: grid;
    grid-template-columns: 1fr auto;
    grid-template-areas: "title close";
}

.floating .panel .titlebar .title {
    font-weight: 700;
    font-size: 125%;
    margin: 0;
    padding: 20px;
}

.floating .panel .titlebar .close {
    margin-right: 10px;
    margin: 0;
    padding: 20px;

    cursor: hand;
}

.floating .panel .titlebar .close:hover {
    background-color: rgba(0, 0, 0, 0.2);
}

@media (min-width: 800px) and (min-height: 600px)
{
    .floating .panel {
        height: 400px;
    }
}

@media (min-height: 600px)
{
    .floating .panel {
        height: 400px;
    }
}

/* NAVBAR */
.nav {
    position: fixed;
    top: 0;
    width: 100%;
    height: 80px;
    background-color: rgb(0, 0, 0, 0.4);
    z-index: 1;

    display: grid;
    grid-template-rows: auto;
    grid-template-columns: auto 1fr;
    grid-template-areas: "logo items";

    justify-items: flex-end;
}

.nav .logo {
    margin: 10px;
    max-height: 60px;
}

.nav .items {
    grid-area: items;
    
    display: flex;
    flex-direction: row;
    list-style-type: none;
    color: white;
    
    margin: 0;
    padding: 0;
    margin-right: 15px;
    box-sizing: border-box;

    align-self: center;
}

.nav .items li {
    display: block;
    margin: 10px;

    width: 110px;
    text-align: center;

    --back-color: var(--crush40-red);

    cursor: pointer;
}

.nav .items li:hover {
    --back-color: var(--crush40-red-hover);
}

.nav .items li .back {
    background-color: var(--back-color);
    transform: skew(-25deg);

    position: absolute;
    margin-top: 5px;
    width: 110px;
    height: 40px;

    z-index: -1;
}

.nav .items li p {
    position: relative;

    display: block;
}

/* OPENING */
.opening {
    display: grid;
    justify-content: center;
    align-content: center;
    
    height: calc(100% - 200px);
    min-height: 400px;

    color: white;
}

.opening img {
    max-width: 90%;
}

.opening-intro
{
    text-align: center;
    width: 100%;

    display: flex;
    flex-direction: column;

    align-items: center;
    justify-items: center;

    box-sizing: border-box;
    padding: 10px;
    margin: 0;
}

